@@ -1,4 +1,6 @@
 ﻿Sigil v0.2.0 RC1 ADD_DATE
+    - fixed a rare off-by-one error in Book View searching when the caret was at the start of
+    the matched string; this made the search skip that instance of the match (issue #280)
     - fixed an issue with the Find Dialog not correctly scrolling to the found text in
     Book View (issue #195)
     - fixed an issue with Tidy not fixing free ampersands into "&amp;", even when configured
